[package]
name = "raft"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
prost = "0.11.0"
prost-types = "0.11.0"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.8.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
